FIX button not aligned

--- a/src/scss/components/_lightbox-modal.scss
+++ b/src/scss/components/_lightbox-modal.scss
@@ -20,7 +20,7 @@
   &__inner {
     display: grid;
     gap: 0 3.4rem;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 4.2rem auto 4.2rem;
     grid-template-rows: 5vh 90vh 5vh;
   }
 
@@ -56,18 +56,17 @@
   &__prev-btn-wrapper,
   &__next-btn-wrapper {
     grid-row: 2 / 3;
+    display: grid;
+    align-items: center;
+    justify-items: center;
   }
 
   &__prev-btn-wrapper {
     grid-column: 1 / 2;
-    display: grid;
-    align-items: center;
   }
 
   &__next-btn-wrapper {
     grid-column: 3 / 4;
-    display: grid;
-    align-items: center;
     grid-template-rows: 1fr;
   }
 
